@@ -5,6 +5,7 @@ Version 1.1.23 (released ??-???-????)
   * add support for root-relative svnauthz access files (issue #535)
   * fix cvsdb MySQL-python argument conversion error (issue #539)
   * fix double-escaping of revision links (issue #541)
+  * fix bug that prevented mod_python 3.4+ deployment (issue #540)
 
 Version 1.1.22 (released 14-Jan-2014)
 
